--- a/notes.tex
+++ b/notes.tex
@@ -158,9 +158,8 @@
           v_1 & v_2 & v_3 \\
           w_1 & w_2 & w_3
         \end{vmatrix}$
-        \item areas and volumes (see appendix) \\
-        if $\vec{u}$ and $\vec{v}$ are the sides of a parallelogram, then its area is $\magn{\vec{u}\times\vec{v}}$ \\
-        if a parallelepiped has edges $\vec{u}, \vec{v}, \vec{w}$, its volume is the absolute value of its triple scalar product
+        \item if $\vec{u}$ and $\vec{v}$ are the sides of a parallelogram, then its area is $\magn{\vec{u}\times\vec{v}}$
+        \item if a parallelepiped has edges $\vec{u}, \vec{v}, \vec{w}$, its volume is the absolute value of its triple scalar product
         \item torque $= \vec{\tau} = \vec{r} \times \vec{F}$
       \end{itemize}
     \end{itemize}
