--- a/notes.tex
+++ b/notes.tex
@@ -136,7 +136,7 @@
         \end{align*}
         \item $\proj$ (vector projection)
         \begin{align*}
-          \proj_{\vec{u}} \vec{v} &= \comp_{\vec{u}} \vec{v} \cdot \frac{\vec{u}}{\magn{\vec{v}}} \\
+          \proj_{\vec{u}} \vec{v} &= \comp_{\vec{u}} \vec{v} \cdot \frac{\vec{u}}{\magn{\vec{u}}} \\
           &= \frac{\vec{u}\cdot\vec{v}}{\magn{\vec{u}}^2}\vec{u}
         \end{align*}
       \end{itemize}
@@ -171,6 +171,90 @@
         \item torque $= \vec{\tau} = \vec{r} \times \vec{F}$
       \end{itemize}
     \end{itemize}
+  }
+\end{multicols}
+
+\newpage
+\begin{multicols}{2}
+  \col{
+    Lines
+    \begin{enumerate}[(1)]
+      \item Vector Equation Form
+      
+      $\vec{r} = \vec{r_0} + t\vec{v}$ \\
+      eg $\left<x,y,z\right> = \left<1,2,-5\right> + t\left<3,-4,-1\right>$
+      \item Parametric Equation Form
+      \begin{align*}
+        x &= 1+3t \\
+        y &= 2-4t \\
+        z &= -5-t 
+      \end{align*}
+      
+      \item Symmetric Equation Form 
+      
+      solve for $t$
+      \[\frac{x-1}{3} = \frac{y-2}{-4} = \frac{z+5}{-1}\]
+
+      \item Edge Case: 0-component
+      
+      Let a line be defined by the point and vector $(1,-2,6)$ and $\left<3,7,0\right>$. We say the line is:
+      \[ \frac{x-1}{3} = \frac{y+2}{7}, z=6 \]
+    \end{enumerate}
+    \begin{itemize}
+      \item point to line distance: use paralleogram area trick
+    \end{itemize}
+
+    Planes
+    \begin{enumerate}[(1)]
+      \item Vector Equation Form
+      
+      $(\vec{r}-\vec{r_0})\cdot \vec{n} = 0$ \\
+      eg $(\left<x,y,z\right>-\left<1,0,1\right>) \cdot \left<1,2,-3\right> = 0$
+      \item Scalar Equation, "General" Form
+      
+      $ax +by +cz +d = 0$
+    \end{enumerate}
+    \begin{itemize}
+      \item point to plane distance: use $\comp_{\vec{u}}\vec{v}$ trick
+      \item angle between planes: same as angle between their normal vectors
+    \end{itemize}
+
+    Quadric Surfaces
+    \begin{itemize}
+      \item cylinder: 3d shape consisting of all parallel lines (eg $y=3x^2$)
+      \item see \url{quadric_surfaces.pdf}
+    \end{itemize}
+  }
+  \col{
+    intentionally blank
+  }
+\end{multicols}
+
+\newpage
+\addsection{Chapter 3: Vector-Valued Functions}
+\begin{multicols}{2}
+  \col{
+    Vector-Valued Function
+    $${\vec{r}(t) = \left<f(t), g(t), h(t)\right>}, i < t < j$$
+
+    Unit Circle Parameterization
+    
+    temp\\
+
+    Limits of VVFs
+    \begin{itemize}
+      \item pass them into the vec. pretty intuitive
+      \item a VVF $\vec{r}(a)$ is cont. at $a$ iff $\displaystyle\lim_{t\rightarrow a}\vec{r}(t) = \vec{r}(a)$ (and both are defined )
+    \end{itemize}
+
+    Calc with VVFs
+    \begin{itemize}
+      \item derivatives are intuitive. use the corresponding dot/cross/scalar in deriving $\vec{u}\cdot\vec{v}$
+      \item unit tangent vector is the derivative's unit vector
+      \item integrals are intuitive. consider constant vector $C$ instead of scalar constant
+    \end{itemize}
+  }
+  \col{
   }
 \end{multicols}
 
