fix lack of backslash i and j bug

--- a/notes.tex
+++ b/notes.tex
@@ -152,7 +152,7 @@
         $\magn{\vec{u}\times\vec{v}} = \magn{\vec{{u}}}\magn{\vec{v}}\sin\theta$
         \item alg.:
         \item $\vec{u} \times \vec{v} = \det\begin{vmatrix}
-          \hat{\i} & \hat{\j} & \hat{k}\\
+          \hat{\imath} & \hat{\jmath} & \hat{k}\\
           u_1 & u_2 & u_3 \\
           v_1 & v_2 & v_3
         \end{vmatrix}$
