--- a/notes.tex
+++ b/notes.tex
@@ -456,7 +456,87 @@
 \end{multicols}
 
 \newpage
+\addsection{Chapter 5: Multiple Integration}
+\begin{multicols}{2}
+  \col{
+    Double Integration
+    \begin{itemize}
+      \item Consider \\
+      \includegraphics{iint_region.png}.
+      \item its area via a double integral:
+      \[ \int_{x=0}^{x=2}\int_{y=\frac{1}{2}x}^{2}1dydx.\]
+      \item notice the order of bounds variables.
+      \item to change order of integration, graph the region to get the bounds ($x$=, $y$=) correct
+      \item for improper integrals that come from unbounded functions, adapting the above is fine.
+      \item but for improper integrals that come from unbounded regions, consider $\iint xye^{-x^2-y^2}dA$ for the first quadrant. then we set up and solve
+      \begin{align*}
+        &\,\lim_{(b,d)\rightarrow(\infty, \infty)}\int_{0}^{b}\int_{0}^{d}xye^{-x^2-y^2}dydx \\
+        =&\,\lim_{(b,d)\rightarrow(\infty, \infty)}\int_{0}^{b}\int_{0}^{d}xe^{-x^2}ye^{-y^2}dydx \\
+        =&\,\lim_{(b,d)\rightarrow(\infty, \infty)}\int_{0}^{b}xe^{-x^2}dx\int_{0}^{b}ye^{-y^2}dy \\
+        =&\,\dots \\
+        =&\,\frac{1}{4}
+      \end{align*}
+      \item converting to polar from rectangular? use
+      \begin{align*}
+        x &=r\cos\theta \\
+        y &=r\sin\theta \\
+        dA &= rdrd\theta
+      \end{align*}
+    \end{itemize}
+  }
+  \col{
+    Triple Integration
+    \begin{itemize}
+      \item six orderings exist for bounds. one ex:
+      \begin{gather*}
+        \iiint\limits_E f(x,y,z)dV \\
+        = \int_{x=a}^{x=b}\int_{y=g_1(x)}^{y=g_2(x)}\int_{z=h_1(x,y)}^{z=h_2(x,y)}f(x,y,z)dzdydx.
+      \end{gather*}
+      \item think: fix $x$ with first bound. now we can use $x$ in the second bound. etc.
+      % \item again, remember to graph surface to better understand changing integration order
+      \item avg value of $f$ on region $E$:
+      \[ \text{Avg}(f) = \frac{1}{\text{Vol}(E)}\iiint\limits_E f dV \]
+      \item rect to cylindrical? just polar, but keep $z$.
+      
+      $dV = rdzdrd\theta$ is usually best. 
+      \item cyl to rect? $r=\sqrt{x^2+y^2}, \tan\theta = y/x$, keep $z$. careful: $\forall \theta,\tan^{-1}(\theta)\in (-\frac{\pi}{2},\frac{\pi}{2})$
+      \item consider spherical:\\
+      \includegraphics{spherical_coords.png}
+      \item rect to spherical: $\rho^2=x^2+y^2+z^2$,\\ $\tan\theta=\frac{y}{x},\phi=\cos^{-1}(\frac{z}{\sqrt{x^2+y^2+z^2}})$
+      
+      $dV=\rho^2\sin\phi \,d\rho \,d\theta \,d\phi$ usually best?
+      \item cyl to spherical: $\rho^2 = r^2 + z^2$,\\ $\theta=\theta, \phi=\cos^{-1}(\frac{z}{\sqrt{r^2+z^2}})$
+      \item spherical to rect: $x=\rho\sin\phi\cos\theta$, \\$y=\rho\sin\phi\sin\theta,z=\rho\cos\phi$
+      \item spherical to cyl: $r=\rho\sin\phi,$\\$\theta=\theta,z=\rho\cos\phi$
+    \end{itemize}
+  }
+\end{multicols}
+  
+\newpage
 \addsection{Appendix} 
+Sorted newest first
+
+\subsection*{double integral properties}
+for most properties, just feel it out from single integrals.
+
+but some more esoteric ones (even if in notation only) exist:
+\begin{itemize}
+  \item if $m \le f(x,y) \le M$, then
+  \[ m\times A(R) \le \iint\limits_R f(x,y)dA \le M \times A(R).\]
+  \item if $f(x,y)$ is factorable as a product of $g(x)$ (of $x$ only) and $h(y)$ (of $y$ only), then over $R = \{(x,y) \mid a\le x\le b, c\le y\le d\}$,
+  \[\iint\limits_R f(x,y)dA  = \left(\int_{a}^{b}g(x)dx\right)\left(\int_{c}^{d}h(y)dy\right).\]
+  I think this is because of that property where you can factor out numbers, applied creatively several times?
+\end{itemize}
+
+\subsection*{cross/dot products}
+\begin{itemize}
+  \item see:
+  \begin{itemize}
+    \item \url{media/cross_prod_area_ex.png}
+    \item \url{media/scalar_projection_composition_ex.png}
+    \item \url{media/scalar_triple_prod_parallelepiped_ex.png}
+  \end{itemize}
+\end{itemize}
 \subsection*{matrices, 3x3 determinants}
 In depth lesson:
 \begin{itemize}
@@ -472,16 +552,6 @@ Recall that a elements of a matrix are enumerated $a_{ij}$ where $i$ is column a
 Recall that the minor of the matrix element here is the 2 by 2 determinant when you take away the row and column of the element in a 3 by 3 matrix.  Picking an arbitrary row (or even column), with $a_{ij}$ being an element and $M_{ij}$ being a minor, a 3 by 3 determinant is calculated by 
 \[ \sum_{j=1}^{3} (-1)^{i+j} a_{ij} M_{ij} \]
 In the figure \texttt{media/3x3determinant.png}, $(-1)^{i+j}$ is in green, $a_{ij}$ in orange, and $M_{ij}$ in blue.
-
-\subsection*{cross/dot products}
-\begin{itemize}
-  \item see:
-  \begin{itemize}
-    \item \url{media/cross_prod_area_ex.png}
-    \item \url{media/scalar_projection_composition_ex.png}
-    \item \url{media/scalar_triple_prod_parallelepiped_ex.png}
-  \end{itemize}
-\end{itemize}
 
 
 
